# c2g-schedule

./: Main.hs  c2g-schedule.cabal  flake.nix  package.yaml
